--- a/packages.config
+++ b/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Aspose.Words" version="23.2.0" targetFramework="net48" />
+  <package id="FreeSpire.Doc" version="10.8.0" targetFramework="net48" />
   <package id="xunit" version="2.4.2" targetFramework="net48" />
   <package id="xunit.abstractions" version="2.0.3" targetFramework="net48" />
   <package id="xunit.analyzers" version="1.0.0" targetFramework="net48" />
